bugfix: testimonial image responsiveness on mobile view.

--- a/css/index.css
+++ b/css/index.css
@@ -496,8 +496,7 @@ a{
 }
 
 .testimonial__image{
-    width: 100%;
-    
+    width: 100%; 
 }
 
 .testimonial__image-container{
@@ -510,7 +509,9 @@ a{
     top: 3rem;
     right: -32px;
 }
-
+.testimonial .grid{
+    grid-template-columns: minmax(20px, 1fr);
+}
 @media screen and (min-width:768px){
     .testimonial .quote, .testimonial .quote__author{
         font-size: 2.4rem;
